[package]
name = "p2p-probe"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.3", features = ["derive"] }
futures = "0.3.27"
litep2p = { git = "https://github.com/paritytech/litep2p", rev = "b142c9e" }
multiaddr = "0.17.0"
tokio = { version = "1.36.0", features = ["macros"] }
